src/test/ui/consts/const-err4.stderr
error[E0080]: constant evaluation of enum discriminant resulted in non-integer
  --> $DIR/const-err4.rs:18:11
   |
LL |     Boo = [unsafe { Foo { b: () }.a }; 4][3],
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
